# Raptors

./: Cargo.toml  README.md  ci.yml  pages.sh
.github/workflows/: ci.yml
design_docs/: conceptual_model.md  todo_lists.md
docs/: all.html  crates.js  index.html  search-index.js  settings.html  sidebar-items.js  source-files.js
docs/actors/: enum.Status.html  index.html  sidebar-items.js  struct.Actor.html
docs/executor/: index.html  struct.Executor.html
docs/implementors/core/clone/: trait.Clone.js
docs/implementors/core/cmp/: trait.PartialEq.js
docs/implementors/core/convert/: trait.Into.js
docs/implementors/core/default/: trait.Default.js
docs/implementors/core/fmt/: trait.Debug.js  trait.Display.js
docs/implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
docs/implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
docs/messages/: enum.Keyword.html  index.html  sidebar-items.js  struct.ActorContent.html  struct.ActorMsg.html  struct.DummyWorkload.html  struct.Workload.html
docs/poc_raptor/: index.html
docs/poc_raptor/actors/: enum.Status.html  index.html  struct.Actor.html
docs/poc_raptor/executor/: index.html  struct.Executor.html
docs/poc_raptor/messages/: enum.Keyword.html  sidebar-items.js  struct.ActorContent.html  struct.ActorMsg.html  struct.DummyWorkload.html  struct.Workload.html
docs/raptors/: all.html  index.html  sidebar-items.js
docs/raptors/actors/: index.html  struct.Actor.html
docs/raptors/executor/: index.html  struct.Executor.html
docs/raptors/messages/: enum.OpCode.html  enum.SystemCommand.html  enum.TypedMessage.html  index.html  sidebar-items.js  struct.DummyWorkload.html  struct.Workload.html
docs/raptors/system/: index.html  sidebar-items.js  struct.System.html  struct.SystemBuilder.html  struct.SystemConfig.html
docs/src/poc_raptor/: actors.rs.html  executor.rs.html  lib.rs.html  messages.rs.html
docs/src/raptors/: actors.rs.html  executor.rs.html  lib.rs.html  messages.rs.html  system.rs.html
examples/: Cargo.toml
examples/diamond-tasks/: main.rs
poc_raptor/src/: actors.rs  executor.rs  lib.rs  messages.rs
raptors/: Cargo.toml  profiling_test.csv
raptors-doc/: README.md  mkdocs.yml
raptors-doc/docs/: index.md  raptors.md  setup-docker.md  setup-repo.md
raptors/candi_design/: ring_buffer.rs
raptors/logging/: logging_test.csv
raptors/profiling/: profiling_test.csv
raptors/src/: actors.rs  builders.rs  command_builder.rs  context.rs  cost_model.rs  estimator.rs  estimator_builder.rs  executor.rs  executor_types.rs  lib.rs  logger.rs  mailbox.rs  mailbox_new.rs  messages.rs  messages_builder.rs  profiler.rs  scheduler.rs  syscmd_builder.rs  system.rs  system_builder.rs  system_command_builder.rs  system_config.rs  tensor_types.rs  workload_builder.rs  workloads.rs
scripts/: line_of_code_stats.sh  make_doc.sh  start_profiling.sh
