[package]
name = "raptors-examples"
version = "0.1.0"
edition = "2021"
workspace = ".."


# diamond diamond-tasks
# 4 tasks, task 1 is the precedence of 2 and 3
# then 2 and 3 is the precedence of task 4
# they form a diamond shape on deps topology
[[bin]]
name = "diamond-tasks"
path = "diamond-tasks/main.rs"

[dependencies]
raptors = { path = "../raptors", package = "raptors", version = "0.1.0" }
uuid = { version = "0.6", features = ["serde", "v4"] }
rand = { version = "0.8.5" }
log = "0.4"
env_logger = { version = "0.9.0" }
tokio = { version = "1", features = ["full", "tracing"] }

# deps for tracing
tracing = { version = "0.1.34" }
tracing-subscriber = { version = "0.3.15" }
opentelemetry = { version = "0.17.0" }
tracing-opentelemetry = { version = "0.17.2" }
opentelemetry-jaeger = { version = "0.16.0" }



