[package]
name = "raptors"
version = "0.1.0"
edition = "2021"
workspace = ".."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.6", features = ["serde", "v4"] }
rand = { version = "0.8.5" }
tokio = { version = "1", features = ["full"] }


# deps for logging
log = "0.4"
env_logger = "0.8"

# deps for tracing
tracing = "0.1.34"
tracing-subscriber = "0.3.11"

[profile.release]
panic = "abort"
