[package]
name = "raptors"
version = "0.1.0"
edition = "2021"
workspace = ".."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.6", features = ["serde", "v4"] }
rand = { version = "0.8.5" }
chrono = { version = "0.4.22" }
tokio = { version = "1", features = ["full", "tracing"] }


# deps for logging
log = { version = "0.4" }
env_logger = { version = "0.9.0" }

# deps for tracing
tracing = { version = "0.1.34" }
tracing-subscriber = { version = "0.3.15" }
opentelemetry = { version = "0.17.0" }
tracing-opentelemetry = { version = "0.17.2" }
opentelemetry-jaeger = { version = "0.16.0" }

[profile.release]
panic = "abort"
